[package]
name = "raft-test"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0.0"
anyhow = "1.0.32"
bincode = "1.3"
env_logger = "0.7.1"
futures = "0.3.5"
futures-retry = "0.5.0"
log = { version = "0.4", features = ["std"] }
prost = "0.6.1"
protobuf = "2"
raft = "0.5.0"
serde = { version = "1.0.114", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3.0"
heed = "0.8.1"
zerocopy = "0.3.0"

[build-dependencies]
tonic-build = "0.3.0"
